fix: jupyter on pycharm

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = ">=3.11,<3.13"
 dspy = "^2.5.43"
 python-dotenv = "^1.0.1"
+jupyter = "^1.1.1"
+ipywidgets = "^8.1.5"
 
 
 [tool.poetry.group.dev.dependencies]
