--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dspy = "^2.5.43"
 python-dotenv = "^1.0.1"
 jupyter = "^1.1.1"
 ipywidgets = "^8.1.5"
+networkx = "^3.4.2"
+matplotlib = "^3.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
