--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ jupyter = "^1.1.1"
 ipywidgets = "^8.1.5"
 networkx = "^3.4.2"
 matplotlib = "^3.10.0"
+smolagents = "^1.9.2"
 
 
 [tool.poetry.group.dev.dependencies]
